--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "v4",
-  "description": "Personal Website V4",
+  "name": "portfolio-v2",
+  "description": "Personal Website V2",
   "version": "1.0.0",
   "author": "Hamdan Mohammad <hamdan102703@gmail.com>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/bchiang7/v4"
+    "url": "https://github.com/hamdan-27/v4"
   },
   "keywords": [
     "gatsby"
